--- a/review-carousel/style.css
+++ b/review-carousel/style.css
@@ -1,15 +1,11 @@
-#people {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-}
-
-.person {
-  flex: 0 0 100%;
-  transition: transform 0.5s ease-in-out;
-}
-
 #left,
 #right {
   cursor: pointer;
+}
+.card {
+  border: 1px solid black;
+}
+
+.img {
+  width: 10rem;
 }
